@startuml overview

top to bottom direction

skinparam defaultFontName HackGen

skinparam linetype ortho

interface grid_cells {}
interface position {}
interface neighbor {}
interface base {}

Minesweeper --> Position
Minesweeper --> GridCellsFactory
Minesweeper --> grid_cells

GridCells ..|> grid_cells
GridCells --> position

grid_cells --> position

Position ..|> position

GridCellsFactory --> Cell
GridCellsFactory --> CellWithNeighbors
GridCellsFactory --> GridCells

CellWithNeighbors --> neighbor
CellWithNeighbors ..|> neighbor
CellWithNeighbors --> base

Cell ..|> base

@enduml